<resources>
    <string name="app_name">FinTrack</string>
    <string name="enter_email">Enter email</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_t_have_an_account_create">Dont\'t have an account? Create</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot</string>
    <string name="title_activity_signup">signup</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
</resources>